@@ -132,6 +132,37 @@ class AddCalendarEventViewTests(unittest.TestCase):
         self.assertEqual(response.location,
             'http://example.com/communities/community/my-event-1/')
 
+    def test_submitted_valid_no_category(self):
+        context = self.community
+        from webob import MultiDict
+        request = testing.DummyRequest(
+            params=MultiDict({
+                'form.submitted': '1',
+                'startDate': '1/1/2009 16:00',
+                'endDate': '1/1/2009 17:00',
+                'title': 'my event',
+                'text': 'come to a party',
+                'contact_email': 'me@example.com',
+                'contact_name': 'Me',
+                'location': 'NYC',
+                'attendees': '',
+                'security_state': 'public',
+                'tags': 'thetesttag',
+                })
+            )
+        self._register()
+        self._registerSecurityWorkflow()
+
+        from karl.content.interfaces import ICalendarEvent
+        from repoze.lemonade.testing import registerContentFactory
+        registerContentFactory(DummyCalendarEvent, ICalendarEvent)
+        response = self._callFUT(context, request)
+        self.assertEqual(response.location,
+            'http://example.com/communities/community/my-event/')
+        response = self._callFUT(context, request)
+        self.assertEqual(response.location,
+            'http://example.com/communities/community/my-event-1/')
+
     def test_submitted_valid_sendalert(self):
         context = self.community
         from webob import MultiDict
@@ -280,6 +311,46 @@ class EditCalendarEventViewTests(unittest.TestCase):
         self.assertEqual(context.modified_by, 'testeditor')
         self.assertEqual(context.calendar_category, 'cal1')
 
+    def test_submitted_valid_no_category(self):
+        self._register()
+        context = DummyCalendarEvent()
+        DummyCalendar()['anevent'] = context
+        from karl.testing import DummyCatalog
+        context.catalog = DummyCatalog()
+        from karl.models.interfaces import ISite
+        from zope.interface import directlyProvides
+        directlyProvides(context, ISite)
+        from webob import MultiDict
+        request = testing.DummyRequest(
+            params=MultiDict({
+                'form.submitted': '1',
+                'startDate': '1/1/2009 16:00',
+                'endDate': '1/1/2009 17:00',
+                'title': 'My Event',
+                'text': 'Come to a party!',
+                'contact_email': 'me@example.com',
+                'contact_name': 'Me',
+                'location': 'NYC',
+                'attendees': '',
+                'sendalert': 'true',
+                'security_state': 'public',
+                'tags': 'thetesttag',
+                }))
+        from karl.content.interfaces import ICalendarEvent
+        from repoze.lemonade.testing import registerContentFactory
+        registerContentFactory(DummyCalendarEvent, ICalendarEvent)
+        from karl.models.interfaces import IObjectModifiedEvent
+        from zope.interface import Interface
+        L = testing.registerEventListener((Interface, IObjectModifiedEvent))
+        testing.registerDummySecurityPolicy('testeditor')
+        response = self._callFUT(context, request)
+        self.assertTrue(response.location.startswith(
+            'http://example.com/anevent/'))
+        self.assertEqual(len(L), 2)
+        self.assertEqual(context.title, 'My Event')
+        self.assertEqual(context.text, 'Come to a party!')
+        self.assertEqual(context.modified_by, 'testeditor')
+        self.assertEqual(context.calendar_category, '')
 
 class Test_show_calendarevent_ics_view(unittest.TestCase):
 
@@ -353,7 +424,7 @@ class CalendarCategoriesViewTests(unittest.TestCase):
         return calendar_setup_categories_view(context, request)
 
     # show
-    
+
     def test_notsubmitted(self):
         context = DummyCalendar()
         request = testing.DummyRequest()
@@ -367,7 +438,7 @@ class CalendarCategoriesViewTests(unittest.TestCase):
         context = DummyCalendar()
         context['foo'] = DummyCalendarCategory('foo')
         context['bar'] = DummyCalendarCategory('bar')
-        
+
         from karl.content.interfaces import ICalendarCategory
         default_name = ICalendarCategory.getTaggedValue('default_name')
         context[default_name] = DummyCalendarCategory(default_name)
@@ -376,9 +447,9 @@ class CalendarCategoriesViewTests(unittest.TestCase):
         renderer = testing.registerDummyRenderer(
             'templates/calendar_setup.pt')
         response = self._callFUT(context, request)
-        
+
         self.assert_(len(renderer.editable_categories), 2)
-        names = [x.__name__ for x in renderer.editable_categories] 
+        names = [x.__name__ for x in renderer.editable_categories]
         self.assert_(default_name not in names)
 
     def test_sets_back_to_calendar_url(self):
@@ -388,18 +459,18 @@ class CalendarCategoriesViewTests(unittest.TestCase):
             'templates/calendar_setup.pt')
         response = self._callFUT(context, request)
 
-        from repoze.bfg.url import model_url 
+        from repoze.bfg.url import model_url
         self.assertEqual(model_url(context, request),
                          renderer.back_to_calendar_url)
 
     # delete
-    
+
     def test_delete_does_not_allow_deletion_of_default_category(self):
         from repoze.bfg.url import model_url
         from karl.content.models.calendar import ICalendarCategory
 
         default_name = ICalendarCategory.getTaggedValue('default_name')
-        
+
         context = DummyCalendar()
         request = testing.DummyRequest(post={'form.delete': default_name})
         response = self._callFUT(context, request)
@@ -419,7 +490,7 @@ class CalendarCategoriesViewTests(unittest.TestCase):
         expected = model_url(context, request, 'categories.html',
                    query={'status_message':'Category is invalid'})
         self.assertEqual(response.location, expected)
-        
+
     def test_delete_reports_invalid_when_category_name_is_invalid(self):
         from repoze.bfg.url import model_url
         context = DummyCalendar()
@@ -445,7 +516,7 @@ class CalendarCategoriesViewTests(unittest.TestCase):
         context['_default_layer_'].paths = ['/foo']
         context['foo'] = DummyCalendarCategory('foo-title')
         testing.registerModels({'/foo':context['foo']})
-        
+
         request = testing.DummyRequest(post={'form.delete': 'foo'})
         response = self._callFUT(context, request)
 
@@ -459,7 +530,7 @@ class CalendarCategoriesViewTests(unittest.TestCase):
         self.assertEqual(context['_default_layer_']._p_changed, True)
         self.assertEqual(event.calendar_category, '/_default_category_')
 
-    # add new category    
+    # add new category
 
     def test_submit_fails_if_title_is_already_taken(self):
         context = DummyCalendar()
@@ -475,9 +546,9 @@ class CalendarCategoriesViewTests(unittest.TestCase):
 
         self.assertEqual(response.status, '200 OK')
         self.assertEqual(renderer.fielderrors_target, '__add_category__')
-        self.assertEqual(str(renderer.fielderrors['category_title']), 
+        self.assertEqual(str(renderer.fielderrors['category_title']),
                          'Name is already used')
-        
+
     def test_submit_fails_if_title_is_missing(self):
         context = DummyCalendar()
 
@@ -509,10 +580,10 @@ class CalendarCategoriesViewTests(unittest.TestCase):
             def __init__(self, *arg):
                 self.arg = arg
         registerContentFactory(category_factory, ICalendarCategory)
-        response = self._callFUT(context, request) 
-        
+        response = self._callFUT(context, request)
+
         self.assertEqual(context['Announcements'].arg, ('Announcements',))
-        
+
         expected = model_url(context, request, 'categories.html',
                              query={'status_message':'Calendar category added'})
         self.assertEqual(response.location, expected)
@@ -520,13 +591,13 @@ class CalendarCategoriesViewTests(unittest.TestCase):
         self.assertEqual(context['_default_layer_']._p_changed, True)
 
     # edit an existing category
-    
+
     def test_edit_does_not_allow_editing_the_default_category(self):
         from repoze.bfg.url import model_url
         from karl.content.models.calendar import ICalendarCategory
 
         default_name = ICalendarCategory.getTaggedValue('default_name')
-        
+
         context = DummyCalendar()
         request = testing.DummyRequest(post={
             'form.edit': 1,
@@ -552,7 +623,7 @@ class CalendarCategoriesViewTests(unittest.TestCase):
         expected = model_url(context, request, 'categories.html',
                    query={'status_message':'Could not find category to edit'})
         self.assertEqual(response.location, expected)
-    
+
     def test_edit_reports_not_found_when_category_name_is_invalid(self):
         from repoze.bfg.url import model_url
         context = DummyCalendar()
@@ -566,11 +637,11 @@ class CalendarCategoriesViewTests(unittest.TestCase):
         expected = model_url(context, request, 'categories.html',
                    query={'status_message':'Could not find category to edit'})
         self.assertEqual(response.location, expected)
-    
+
     def test_edit_fails_if_title_is_missing(self):
         context = DummyCalendar()
         context['foo'] = DummyCalendarCategory('foo')
-    
+
         renderer = testing.registerDummyRenderer(
             'templates/calendar_setup.pt')
         request = testing.DummyRequest(post={
@@ -578,9 +649,9 @@ class CalendarCategoriesViewTests(unittest.TestCase):
             'category__name__': 'foo',
             'category_title': ''
             })
-    
+
         response = self._callFUT(context, request)
-    
+
         self.assertEqual(response.status, '200 OK')
         self.assertEqual(renderer.fielderrors_target, 'foo_category')
         self.assertEqual(str(renderer.fielderrors['category_title']),
@@ -597,14 +668,14 @@ class CalendarCategoriesViewTests(unittest.TestCase):
             'form.edit': 1,
             'category__name__': 'foo',
             'category_title': 'bar'
-            })   
+            })
         response = self._callFUT(context, request)
 
         self.assertEqual(response.status, '200 OK')
         self.assertEqual(renderer.fielderrors_target, 'foo_category')
-        self.assertEqual(str(renderer.fielderrors['category_title']), 
+        self.assertEqual(str(renderer.fielderrors['category_title']),
                          'Name is already used')
-        
+
 
 
 ICS_TEMPLATE = """
@@ -656,7 +727,7 @@ class CalendarLayersViewTests(unittest.TestCase):
         context = DummyCalendar()
         context['foo'] = DummyCalendarLayer('foo')
         context['bar'] = DummyCalendarLayer('bar')
-        
+
         from karl.content.interfaces import ICalendarLayer
         default_name = ICalendarLayer.getTaggedValue('default_name')
         context[default_name] = DummyCalendarLayer(default_name)
@@ -665,8 +736,8 @@ class CalendarLayersViewTests(unittest.TestCase):
         renderer = testing.registerDummyRenderer(
             'templates/calendar_setup.pt')
         response = self._callFUT(context, request)
-        
-        self.assert_(len(renderer.editable_layers), 2) 
+
+        self.assert_(len(renderer.editable_layers), 2)
         names = [x.__name__ for x in renderer.editable_layers]
         self.assert_(default_name not in names)
 
@@ -677,18 +748,18 @@ class CalendarLayersViewTests(unittest.TestCase):
             'templates/calendar_setup.pt')
         response = self._callFUT(context, request)
 
-        from repoze.bfg.url import model_url 
+        from repoze.bfg.url import model_url
         self.assertEqual(model_url(context, request),
                          renderer.back_to_calendar_url)
 
     # delete
-    
+
     def test_delete_does_not_allow_deletion_of_default_layer(self):
         from repoze.bfg.url import model_url
         from karl.content.models.calendar import ICalendarLayer
 
         default_name = ICalendarLayer.getTaggedValue('default_name')
-        
+
         context = DummyCalendar()
         request = testing.DummyRequest(post={'form.delete': default_name})
         response = self._callFUT(context, request)
@@ -724,7 +795,7 @@ class CalendarLayersViewTests(unittest.TestCase):
         from repoze.bfg.url import model_url
         context = DummyCalendar()
         context['foo'] = DummyCalendarLayer('foo-title')
-        
+
         request = testing.DummyRequest(post={'form.delete': 'foo'})
         response = self._callFUT(context, request)
 
@@ -734,7 +805,7 @@ class CalendarLayersViewTests(unittest.TestCase):
                    query={'status_message':'foo-title layer removed'})
         self.assertEqual(response.location, expected)
 
-    # add new category    
+    # add new category
 
     def test_submit_fails_if_title_is_already_taken_by_a_layer(self):
         context = DummyCalendar()
@@ -754,10 +825,10 @@ class CalendarLayersViewTests(unittest.TestCase):
 
         self.assertEqual(response.status, '200 OK')
         self.assertEqual(renderer.fielderrors_target, '__add_layer__')
-        
-        self.assertEqual(str(renderer.fielderrors['layer_title']), 
+
+        self.assertEqual(str(renderer.fielderrors['layer_title']),
                          'Name is already used')
-        
+
     def test_submit_fails_if_title_is_already_taken_by_a_category(self):
         context = DummyCalendar()
         context['foo'] = DummyCalendarCategory('foo')
@@ -775,8 +846,8 @@ class CalendarLayersViewTests(unittest.TestCase):
 
         self.assertEqual(response.status, '200 OK')
         self.assertEqual(renderer.fielderrors_target, '__add_layer__')
-        
-        self.assertEqual(str(renderer.fielderrors['layer_title']), 
+
+        self.assertEqual(str(renderer.fielderrors['layer_title']),
                          'Name is already used by a category')
 
     def test_submit_fails_if_title_is_missing(self):
@@ -833,22 +904,22 @@ class CalendarLayersViewTests(unittest.TestCase):
             def __init__(self, *arg):
                 self.arg = arg
         registerContentFactory(layer_factory, ICalendarLayer)
-        response = self._callFUT(context, request) 
-        
+        response = self._callFUT(context, request)
+
         self.assertEqual(context['Announcements'].arg, ('Announcements', 'blue', ['/path']))
-        
+
         expected = model_url(context, request, 'layers.html',
                              query={'status_message':'Calendar layer added'})
         self.assertEqual(response.location, expected)
 
     # edit an existing layer
-    
+
     def test_edit_does_not_allow_editing_the_default_layer(self):
         from repoze.bfg.url import model_url
         from karl.content.models.calendar import ICalendarCategory
 
         default_name = ICalendarLayer.getTaggedValue('default_name')
-        
+
         context = DummyCalendar()
         request = testing.DummyRequest(post={
             'form.edit': 1,
@@ -892,7 +963,7 @@ class CalendarLayersViewTests(unittest.TestCase):
     def test_edit_fails_if_title_is_missing(self):
         context = DummyCalendar()
         context['foo'] = DummyCalendarLayer('foo')
-    
+
         renderer = testing.registerDummyRenderer(
             'templates/calendar_setup.pt')
         request = testing.DummyRequest(post={
@@ -900,9 +971,9 @@ class CalendarLayersViewTests(unittest.TestCase):
             'layer__name__': 'foo',
             'layer_title': ''
             })
-    
+
         response = self._callFUT(context, request)
-    
+
         self.assertEqual(response.status, '200 OK')
         self.assertEqual(renderer.fielderrors_target, 'foo_layer')
         self.assertEqual(str(renderer.fielderrors['layer_title']),
@@ -918,7 +989,7 @@ class CalendarLayersViewTests(unittest.TestCase):
         from webob import MultiDict
         request = testing.DummyRequest(post=MultiDict({
             'form.edit': 1,
-            'layer__name__': 'foo', 
+            'layer__name__': 'foo',
             'layer_color': 'red',
             'layer_title': 'bar'
             }))
@@ -927,8 +998,8 @@ class CalendarLayersViewTests(unittest.TestCase):
 
         self.assertEqual(response.status, '200 OK')
         self.assertEqual(renderer.fielderrors_target, 'foo_layer')
-        
-        self.assertEqual(str(renderer.fielderrors['layer_title']), 
+
+        self.assertEqual(str(renderer.fielderrors['layer_title']),
                          'Name is already used')
 
     def test_submit_fails_if_title_is_already_taken_by_a_category(self):
@@ -941,7 +1012,7 @@ class CalendarLayersViewTests(unittest.TestCase):
         from webob import MultiDict
         request = testing.DummyRequest(post=MultiDict({
             'form.edit': 1,
-            'layer__name__': 'foo', 
+            'layer__name__': 'foo',
             'layer_color': 'red',
             'layer_title': 'bar'
             }))
@@ -950,10 +1021,10 @@ class CalendarLayersViewTests(unittest.TestCase):
 
         self.assertEqual(response.status, '200 OK')
         self.assertEqual(renderer.fielderrors_target, 'foo_layer')
-        
-        self.assertEqual(str(renderer.fielderrors['layer_title']), 
+
+        self.assertEqual(str(renderer.fielderrors['layer_title']),
                          'Name is already used by a category')
-        
+
 
 
 class CalendarSetupViewTests(unittest.TestCase):
@@ -973,9 +1044,9 @@ class CalendarSetupViewTests(unittest.TestCase):
         renderer = testing.registerDummyRenderer(
             'templates/calendar_setup.pt')
         response = self._callFUT(context, request)
-        
-        from repoze.bfg.url import model_url 
-        self.assertEqual(model_url(context, request), 
+
+        from repoze.bfg.url import model_url
+        self.assertEqual(model_url(context, request),
                          renderer.back_to_calendar_url)
 
     def test_sets_categories_url(self):
@@ -984,9 +1055,9 @@ class CalendarSetupViewTests(unittest.TestCase):
         renderer = testing.registerDummyRenderer(
             'templates/calendar_setup.pt')
         response = self._callFUT(context, request)
-        
-        from repoze.bfg.url import model_url 
-        self.assertEqual(model_url(context, request, 'categories.html'), 
+
+        from repoze.bfg.url import model_url
+        self.assertEqual(model_url(context, request, 'categories.html'),
                          renderer.categories_url)
 
     def test_sets_layers_url(self):
@@ -995,9 +1066,9 @@ class CalendarSetupViewTests(unittest.TestCase):
         renderer = testing.registerDummyRenderer(
             'templates/calendar_setup.pt')
         response = self._callFUT(context, request)
-        
-        from repoze.bfg.url import model_url 
-        self.assertEqual(model_url(context, request, 'layers.html'), 
+
+        from repoze.bfg.url import model_url
+        self.assertEqual(model_url(context, request, 'layers.html'),
                          renderer.layers_url)
 
 class Test__get_catalog_events(unittest.TestCase):
@@ -1030,10 +1101,10 @@ class Test__get_catalog_events(unittest.TestCase):
         testing.registerAdapter(search, (Interface), ICatalogSearch)
         event = DummyCalendarEvent('foo')
         testing.registerModels({'/foo/bar':event})
-        result = self._callFUT(calendar, request, 
-                               first_moment=now, 
-                               last_moment=now, 
-                               layer_name=None, 
+        result = self._callFUT(calendar, request,
+                               first_moment=now,
+                               last_moment=now,
+                               layer_name=None,
                                flatten_layers=False)
         self.assertEqual(result, [[event]])
 
@@ -1053,10 +1124,10 @@ class Test__get_catalog_events(unittest.TestCase):
         testing.registerAdapter(search, (Interface), ICatalogSearch)
         event = DummyCalendarEvent('foo')
         testing.registerModels({'/foo/bar':event})
-        result = self._callFUT(calendar, request, 
-                               first_moment=now, 
-                               last_moment=now, 
-                               layer_name=None, 
+        result = self._callFUT(calendar, request,
+                               first_moment=now,
+                               last_moment=now,
+                               layer_name=None,
                                flatten_layers=True)
         self.assertEqual(result, [event])
 
@@ -1125,12 +1196,12 @@ class DummyCalendarLayer(testing.DummyModel):
 class DummySearchAdapter:
     def __init__(self, result):
         self.result = result
-    
+
     def __call__(self, context):
         def search(**kw):
             self.kw = kw
             return self.result
-            
+
         return search
 
 class DummyCatalogEvent(testing.DummyModel):
